# hyprvoice

./: .complexity-log.md  .dev-voice-project-structure.md  .gitignore  .project-structure.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  config.example.toml  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
docs/context/: current-implementation-state.md  enigo-wayland-paste-issue.md  gemini-deep-research-prompt.md  voice-dictation-tool.md
docs/handoff/: 20251217-0202-cicd-macos-support.md
docs/historical/: enigo-wayland-investigation.md
docs/project/: model-revamp-tasklist.md  performance-benchmarks.md  phase4-implementation-plan.md  phase4-implementation-summary.md  production-polish-tasks.md  tasklist.md
docs/project/archive/: cicd-task-list.md  frontend-plan.md  open-source-tasklist.md  rust-implementation.md  tasklist.md
docs/writeups/: hyprland-architectural-analysis.md
integrations/: README.md
integrations/waybar/: README.md  config-snippet.jsonc  hyprvoice-status.sh  install.sh  style-snippet.css
scripts/: dev-update.sh  doctor.sh  install.sh  run-cuda12-ollama.sh
src/: error.rs  lib.rs  main.rs
src/audio/: capture.rs  mod.rs
src/commands/: enigo_test.rs  mod.rs
src/config/: settings.rs
src/daemon/: server.rs
src/model/: download.rs  mod.rs  registry.rs  verify.rs
src/output/: inject.rs  inject.rs.wtype-backup  mod.rs
src/state/: mod.rs  paths.rs  toggle.rs
src/transcribe/: candle_engine.rs  whisper.rs
tests/: audio_resampling.rs  daemon_lifecycle.rs  daemon_protocol.rs
ui/src-tauri/: Cargo.toml
(+9 files in other folders)
