[package]
name = "dev-voice"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Voice dictation for Linux developers"
license = "MIT"
repository = "https://github.com/yourusername/dev-voice"

[dependencies]
# Speech recognition
whisper-rs = "0.15"

# Audio capture
pipewire = "0.9"
libspa = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Utilities
directories = "5"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Signal handling for toggle mode
nix = { version = "0.30", features = ["signal", "process"] }
scopeguard = "1.2"

# HTTP downloads
ureq = "2.9"

# Checksum verification
sha2 = "0.10"
hex = "0.4"

# Better resampling
rubato = "0.15"

[dev-dependencies]
tempfile = "3"

[features]
default = []
cuda = ["whisper-rs/cuda"]
rocm = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]

[profile.release]
lto = true
codegen-units = 1
strip = true
